<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyCalendar</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_event">New Event</string>
    <string name="title_activity_main">MyCalendar</string>
    <string name="title_activity_event_editor">Create Event</string>
    <string name="text_save_button">Save</string>
    <string name="text_date_from">From</string>
    <string name="text_date_to">To</string>
    <string name="text_event_name">Name</string>
    <string name="text_calendar_choice">Choose a calendar</string>
    <string name="title_activity_event_show">Event Details</string>
    <string name="text_modify_button">Modify</string>
    <string name="hint_calendar_name">Name</string>
    <string name="add_calendar">New Calendar</string>
    <string name="title_activity_calendar_editor">Create Calendar</string>
    <string name="title_activity_calendar_show">Calendar Details</string>

    <string-array name="calendar_colors">
        <item>Black</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Dark Gray</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Light Gray</item>
        <item>Magenta</item>
        <item>Red</item>
        <item>White</item>
        <item>Yellow</item>
    </string-array>

    <string name="title_activity_all_calendar_list">All Calendar</string>
    <string name="text_view_all_button">View All</string>
    <string name="title_edit_dialog">Choose an action</string>

    <string-array name="edit_actions">
        <item>Delete</item>
        <item>Modify</item>
    </string-array>

    <string name="title_activity_all_event_list">All Events</string>
    <string name="action_settings">Settings</string>
    <string name="title_no_calendar_dialog">No existing calendar!</string>
    <string name="positive_button">Ok</string>
    <string name="negative_button">Cancel</string>
    <string name="month">Month</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="calendars">Calendars</string>
    <string name="events">Events</string>
    <string name="import_calendar">Import Calendar</string>
    <string name="export_calendar">Export Calendar</string>
    <string name="new_event_description">Create a new event</string>
    <string name="new_calendar_description">Create e new local calendar</string>
    <string name="calendars_description">Show all calendar saved locally</string>
    <string name="events_description">Show all events of all calendars</string>
    <string name="import_calendar_desription">Import locally an external calendar</string>
    <string name="export_calendar_description">Export a local calendar to some standard format</string>
    <string name="title_activity_import_calendar">ImportCalendar</string>
    <string name="title_activity_export_calendar">ExportCalendar</string>
    <string name="title_activity_calendar_view">Explore</string>

    <string-array name="view_types">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>List</item>
    </string-array>

    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="year">Year</string>
    <string name="title_activity_calendar_view_day">Day</string>
    <string name="title_activity_calendar_view_week">Week</string>
    <string name="title_activity_calendar_view_year">Year</string>
    <string name="title_activity_calendar_view_month">Month</string>
    <string name="time_finder">Time Finder</string>
    <string name="settings_text">Settings</string>
    <string name="hint_calendar_email">Email</string>
    <string name=" text_all_day">All Day</string>
    <string name="text_reminders">Reminders</string>
    <string name="text_event_notes">Notes</string>
    <string name="text_repeat">Repeat every</string>

    <string-array name="repetition_options">
        <item>No repetition</item>
        <item>Every day</item>
        <item>Every week</item>
        <item>Every month</item>
        <item>Every year</item>
    </string-array>
    <string-array name="reminder_options">
        <item>15 min</item>
        <item>30 min</item>
        <item>1 hour</item>
        <item>1 day</item>
        <item>1 week</item>
        <item>No reminder</item>
    </string-array>

    <string name="text_remove_button">Remove</string>
    <string name="title_activity_events_view">Events</string>
    <string name="text_import_calendar_button">Import</string>
    <string name="text_export_calendar_button">Export</string>
    <string name="text_flexible">Flexible</string>

    <string-array name="flexibility_option">
        <item>None</item>
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
        <item>Night</item>
    </string-array>

    <string name="text_flexibility">Flexible</string>
    <string name="title_activity_time_finder">TimeFinder</string>
    <string name="text_time_range_finder">Time range</string>
    <string name="text_date_range_finder">Date range</string>
    <string name="text_choose_time">Choose</string>
    <string name="text_find_time">Find</string>
    <string name="text_time_needed_finder">Time needed</string>
    <string name="reminder_text">Remind</string>
    <string name="title_activity_reminder_list">ReminderList</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="text_default_calendar">Default calendar</string>
    <string name="text_default_view">Default view</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="text_delay">Delay</string>
    <string name="text_dismiss">Got it</string>

</resources>
