<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/newEvent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:longClickable="true"
        android:onClick="addEvent"
        android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/icon_new_event"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:contentDescription="@string/new_event_description"
            android:scaleType="fitStart"
            android:src="@drawable/new_event" />

        <TextView
            android:id="@+id/new_event_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="3dp"
            android:clickable="true"
            android:fontFamily="@android:string/cancel"
            android:onClick="addEvent"
            android:text="@string/add_event"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/newCalendar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:duplicateParentState="false"
        android:longClickable="true"
        android:onClick="addCalendar"
        android:paddingTop="5dp" >

        <ImageView
            android:id="@+id/icon_new_calendar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:contentDescription="@string/new_calendar_description"
            android:longClickable="false"
            android:paddingTop="0dp"
            android:scaleType="fitStart"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/new_calendar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@android:string/cancel"
            android:text="@string/add_calendar"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Events"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:onClick="allEvents"
        android:paddingTop="0dp" >

        <ImageView
            android:id="@+id/icon_calendars"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/events"
            android:scaleType="fitStart"
            android:src="@drawable/events" />

        <TextView
            android:id="@+id/calendars_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@android:string/cancel"
            android:text="@string/events"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Calendars"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:onClick="allCalendars"
        android:paddingTop="0dp" >

        <ImageView
            android:id="@+id/icon_events"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/calendars"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/events_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@android:string/cancel"
            android:text="@string/calendars"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/time_finder"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:onClick="timeFinder"
        android:paddingTop="0dp" >

        <ImageView
            android:id="@+id/icon_time_finders"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/export_calendar_description"
            android:scaleType="fitStart"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/time_finder_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@android:string/cancel"
            android:text="@string/time_finder"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
    
       <LinearLayout
           android:id="@+id/settings"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:layout_marginTop="10dp"
           android:onClick="settings"
           android:paddingTop="0dp" >

        <ImageView
            android:id="@+id/icon_settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/export_calendar_description"
            android:scaleType="fitStart"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@android:string/cancel"
            android:text="@string/settings_text"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>