<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/Name"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/modifyButton"
        style="@style/mycalendarButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:layout_below="@+id/Name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_state"
        android:onClick="modifyCalendar"
        android:text="@string/text_modify_button"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/removeButtonCalShow"
        style="@style/mycalendarButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:layout_below="@+id/modifyButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="@drawable/button_state"
        android:onClick="removeCalendar"
        android:text="@string/text_remove_button"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <Button
        android:id="@+id/allCalendars"
        style="@style/mycalendarButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="false"
        android:layout_below="@id/removeButtonCalShow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="@drawable/button_state"
        android:onClick="viewCalendars"
        android:text="@string/calendars"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/newCalendar"
        style="@style/mycalendarButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="false"
        android:layout_below="@id/allCalendars"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="@drawable/button_state"
        android:onClick="createCalendar"
        android:text="@string/add_calendar"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        style="@style/mycalendarButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/newCalendar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="@drawable/button_state"
        android:text="@string/add_event"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

</RelativeLayout>