<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="showEndDatePicker" >

    <Spinner
        android:id="@+id/Calendar"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/EventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Calendar"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/text_event_name" 
        android:inputType="textCapSentences" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/StartDate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:layout_below="@+id/EventName"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/From"
        android:minWidth="200dp"
        android:onClick="showStartDatePicker" />

    <TextView
        android:id="@+id/From"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/StartDate"
        android:layout_alignBottom="@+id/StartDate"
        android:layout_alignLeft="@id/EventName"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/text_date_from" />

    <Button
        android:id="@+id/StartTime"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/StartDate"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@id/EventName"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="0dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/StartDate"
        android:minWidth="100dp"
        android:onClick="showStartTimePicker" />

    <TextView
        android:id="@+id/To"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/From"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:text="@string/text_date_to" />

    <Button
        android:id="@+id/EndDate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/StartDate"
        android:layout_below="@id/StartDate"
        android:layout_marginLeft="0dp"
        android:minWidth="200dp"
        android:onClick="showEndDatePicker" />

    <Button
        android:id="@+id/EndTime"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/StartTime"
        android:layout_alignParentRight="true"
        android:layout_below="@id/StartTime"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:minWidth="100dp"
        android:onClick="showEndTimePicker" />

    <Button
        android:id="@+id/Create"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="createEvent"
        android:text="@string/text_save_button" />

    <Button
        android:id="@+id/ViewAllEvents"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Create"
        android:layout_centerHorizontal="true"
        android:onClick="viewAllEvents"
        android:text="@string/text_view_all_button" />

</RelativeLayout>